Fixes alignment of download button on mobile

--- a/src/components/download-links/style.scss
+++ b/src/components/download-links/style.scss
@@ -1,6 +1,7 @@
 download-links {
   position: relative;
   margin-left: auto;
+  display: flex;
 
   svg {
     width: 1.25rem;
@@ -10,7 +11,6 @@ download-links {
 
   button- {
     display: flex;
-    height: 100%;
     align-items: center;
     color: rgba(255,255,255,.8);
     padding: 0 1rem;
